fix: decrease font size by one level on mobile screen

--- a/apps/mochi-web/styles/global.css
+++ b/apps/mochi-web/styles/global.css
@@ -135,6 +135,7 @@ ul.list-dashed > li:before {
   @apply content-['\2014'] absolute top-0 right-full mr-4;
 }
 
+.react-markdown-block p + h4,
 .react-markdown-block p + h5,
 .react-markdown-block p + h6 {
   @apply pt-8;
